2015.062: 2.14
	- Fix memory leak when msr_pack() returns after an error. Patch
	contributed by Larry Baker and Eric Thomas.
	
2015.061:
	- Add ms_readleapseconds() and ms_readleapsecondfile() routines to
	read a leap seconds file into an internal list.
	- Modify msr_endtime() to check for an internal leap second list,
	check for overlap with the record and adjust the end time as needed
	when leap seconds are present.  When a leap second list is present
	any indication of positive leap seconds in the fixed section data
	header are ignored.

2014.248:
	- Add casting to size_t and int to avoid build warnings on certain
	build systems (e.g. older MS Visual Studio).
	The effective maximum sample buffer and record buffer size is ~2GB.

2014.234: 2.13
	- Clean up Makefile and example/Makefile, remove all GCC-specific and
	debug targets.  Makefiles are compatible with both GNU and BSD make. 
	As before, the shared target works only for GCC-compatible compilers.
	Thanks to Elliott Sales de Andrade for pointing out that shared library
	targets did not work with parallel builds, prompting this clean up.

2014.197: 2.13rc
	- Support 128-byte record length by changing MINRECLEN to 128 (was 256).
	The current SEED specification is a minimum record length of 256-bytes,
	but there are cases (e.g. low latency data flow) using 128-byte records.
	- Add declarations, casting and string truncation to clear warnings
	uncovered in ObsPy testing (thanks to Elliott Sales de Andrade).

2014.074:
	- Add __CYGWIN__ defined test to Linux section of lmplatform.h.

2013.273: 2.12
	- Add mst_convertsamples() and mstl_convertsamples() to convert sample
	types.  When converting from float & double types to integer type
	a simple rounding is employed to compensate for machine representation
	of floating point numbers.

2013.267:
	- msr_endtime(): Check activity flags in fixed section of data header,
	if bit 4 is set then a positive leap occurred during the record and