@@ -1,6 +1,8 @@
 2015.062: 2.14
 	- Fix memory leak when msr_pack() returns after an error. Patch
 	contributed by Larry Baker and Eric Thomas.
+	- Change casting of values passed to isdigit() to int intead of
+	unsigned character.  Apparently this was consufing on ARM archs.
 	
 2015.061:
 	- Add ms_readleapseconds() and ms_readleapsecondfile() routines to
